--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,32 +1,33 @@
-:root {
-  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+body{
+  background: #030718;
+  font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.21429;
+    color: #fff;
 }
-
-body {
-  display: flex;
-  flex-direction: column;
-  min-width: 100vw;
-  min-height: 100vh;
-  margin: 0;
+h2{
+  font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.28571;
+    letter-spacing: -0.04em;
+    text-transform: uppercase;
+    color: #fff;
 }
-
-main {
-  flex-grow: 1;
+h3{
+  font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.4;
+    letter-spacing: -0.04em;
+    color: #fff;
 }
-main:has(.back-link) {
-  text-align: center;
+button{
+  border-radius: 3px;
+    padding: 16px 24px;
+    width: 310px;
+    height: 52px;
+    box-shadow: 0 0 4px 0 #57e1ff;
+      background: #57e1ff;
 }
