--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,17 +1,26 @@
 <!-- Hero -->
  <section class="hero-section">
     <div class="container hero-conatiner">
-        <picture>
-            <source srcset="
-                    /img/hero/hero-mob.png 1x,
-                    /img/hero/hero-mob-2x.png 2x
-                    " media="(min-width: 1440px)" />
+        <picture class="hero-img-wrapper">
             <source srcset="
                     /img/hero/hero-desk.png 1x,
                     /img/hero/hero-desk-2x.png 2x
-                    " media="(max-width: 1438px)" />
+                    " media="(min-width: 1440px)" />
+            <source srcset="
+                    /img/hero/hero-mob.png 1x,
+                    /img/hero/hero-mob-2x.png 2x
+                    " media="(max-width: 1439px)" />
             <img class="hero-img" src="/img/hero/hero-mob.png" alt="EtH/USDT" loading="lazy" />
         </picture>
+        <div class="hero-wrapper">
         <h1 class="hero-title">моментально Копируй сделки профи трейдеров</h1>
+        <p class="hero-text">Начни копировать сдлки с успешной командой профессиональных трейдеров в автоматическом режиме.</p>
+        <div class="subscribe-form">
+            <input class="hero-input" type="email" id="email" placeholder="ВАШ E-MAIL" required>
+            <button class="hero-btn" id="submitBtn">НАЧАТЬ</button>
+            <p class="form-message"></p>
+        </div>
+        <p class="hero-bottom-text">5 дней бесплатного пользования</p>
+    </div>
     </div>
  </section>
