--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -24,3 +24,28 @@
     </div>
     </div>
  </section>
+ <!-- Numbers -->
+<section class="numbers-section">
+    <div class="container number-conteiner">
+    <div class="numbers-warpper">
+       <h2 class="numbers-title">Цифры</h2> 
+       <p class="date-text">Cентябрь 2022</p>
+    </div>
+       <ul class="numbers-list">
+        <li class="numbers-item">
+            <p class="item-title">Торговой прибыли</p>
+            <p class="item-number">2756%</p>
+        </li>
+        <li class="numbers-item">
+            <p class="item-title">фьючерсных
+            и спотовых сделок</p>
+            <p class="item-number">67</p>
+        </li>
+        <li class="numbers-item">
+            <p class="item-title">прибыль
+            подписчиков</p>
+            <p class="item-number">375000</p>
+        </li>
+       </ul>
+    </div>
+</section>
