add section 3 deals

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -49,3 +49,34 @@
        </ul>
     </div>
 </section>
+<!-- Deals -->
+<section class="deals-section">
+    <div class="container deals-container">
+        <h2 class="deals-title">Прошедшие сделки</h2>
+        <ul class="deals-list">
+            <li class="deals-item">Онлайн</li>
+        </ul>
+        <div class="swiper deals-swiper">
+            <div class="swiper-wrapper deals-swiper-wrapper">
+                <div class="swiper-slide deals-swiper-slide">
+                   <img src="/img/deals/Frame 21066.png" alt="Deals" loading="lazy">
+                </div>
+                <div class="swiper-slide deals-swiper-slide">
+                    <img src="/img/deals/Frame 21067.png" alt="Deals" loading="lazy">
+                </div>
+                <div class="swiper-slide deals-swiper-slide">
+                    <img src="/img/deals/Frame 21068.png" alt="Deals" loading="lazy">
+                </div>
+                <div class="swiper-slide deals-swiper-slide">
+                    <img src="/img/deals/Frame 21069.png" alt="Deals" loading="lazy">
+                </div>
+                <div class="swiper-slide deals-swiper-slide">
+                    <img src="/img/deals/Frame 21070.png" alt="Deals" loading="lazy">
+                </div>
+            </div>
+            <div class="pag_container">
+                <div class="pag_bar"></div>
+            </div>
+        </div>
+    </div>
+</section>
