--- a/src/css/main.css
+++ b/src/css/main.css
@@ -179,3 +179,59 @@ font-family: "IBM Plex Sans", sans-serif;
     font-size: 60px;
    }
 }
+/* Deals */
+.deals-container{
+    padding-top: 48px;
+    padding-bottom: 53px;
+}
+.deals-list{
+    margin-top: 2px;
+    list-style-type: disc;
+    color: #35ff9e;
+    opacity: 0.9;
+    padding-left: 20px;
+}
+.deals-swiper{
+    margin-top: 24px;
+   
+}
+    .pag_container {
+        width: 311px;
+        margin-left: auto;
+        margin-right: auto;
+        height: 6px;
+        background-color: #434F70;
+        ;
+        border-radius: 4px;
+        position: relative;
+        overflow: hidden;
+        margin-top: 16px;
+    }
+
+    .pag_bar {
+        width: 100px;
+        height: 100%;
+        background-color: #6073a1;
+        border-radius: 4px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: left 0.3s ease-in-out;
+    }
+
+@media only screen and (min-width: 1439px) {
+    .deals-container{
+padding-top: 96px;
+padding-bottom: 118px;
+    }
+   .deals-list{
+    margin-top: 4px;
+   }
+.deals-swiper{
+    margin-top: 82px;
+}
+ .pag_container{
+width: 955px;
+margin-top: 24px;
+}
+}
